Wed Dec 20 09:25:13 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/BDSProjectCreator.pm:
        * modules/BDSWorkspaceCreator.pm:
        * templates/bds.mpd:
        * templates/bdsdll.mpt:
        * templates/bdsexe.mpt:
          Renamed to bds4, this is for Borland Developer Studio 4

        * config/boost_date_time.mpb:
        * config/boost_filesystem.mpb:
        * config/boost_iostreams.mpb:
        * config/boost_prg_exec_monitor.mpb:
        * config/boost_program_options.mpb:
        * config/boost_regex.mpb:
        * config/boost_serialization.mpb:
        * config/boost_signals.mpb:
        * config/boost_test_exec_monitor.mpb:
        * config/boost_thread.mpb:
        * config/boost_wave.mpb:
        * config/xerces.mpb:
        * docs/MPC.sgml:
        * docs/USAGE:
          Updated bds to bds4

Tue Dec 19 11:37:13 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

          Further whitespace fix so that _SOURCES will be correctly
          terminated.

Tue Dec 19 10:37:10 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

          Fix extra whitespace in generated Makefile.am's to match
	  what was generated before multiple configuration support
          was added.

Tue Dec 19 18:02:21 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:

          Fixed a bug where exe LDFLAGS would be overwritten with the
          LDFLAGS_COMMON even when configurations weren't used.

          Also minimized some of the blank line emissions.

        * templates/vc7.mpd:
        * templates/vc7dll.mpt:
        * templates/vc7exe.mpt:
        * templates/vc7lib.mpt:
        * templates/vc7libexe.mpt:
        * templates/vc8platforms.mpt:

          Unified the intermediate directories for nmake, vc7 and vc8 for
          the various machine types (x86, x64, etc.).

Tue Dec 19 07:41:59 2006  J.T. Conklin  <jtc@acorntoolworks.com>
